Adding assets folder

--- a/styles.css
+++ b/styles.css
@@ -74,10 +74,10 @@ table tbody tr td:first-child{
     border-spacing: 0 0.5rem;
     color: #969cb3;
 }
-table tr{
+table tbody tr{
     opacity: 0.7;
 }
-table tr:hover {
+table tbody tr:hover {
     opacity: 1;
 }
 table td{
@@ -87,6 +87,14 @@ table td{
 td.description{
     color: var(--color-primary);
 }
+td.income{
+    color: #12a454;
+}
+td.expense{
+    color: #e92929;
+}
 footer {
+    padding: 4rem 0 2rem;
     text-align: center;
+    opacity: 0.5;
 }
